# randomforestcpp

./: .gitignore  CMakeLists.txt  README.md
include/: rts_forest.hpp  rts_node.hpp  utils.hpp
src/: CMakeLists.txt  RTs_Forest.txt  SmartHome.json  configs.json  iris.json  main_training.cpp  rts_forest.cpp  rts_tree.cpp
